# project-name--task

./: pyproject.toml
task_management/: manage.py
task_management/task_management/: asgi.py  settings.py  urls.py  wsgi.py
task_management/to_do_list/: admin.py  models.py  serializers.py  urls.py  views.py
task_management/to_do_list/migrations/: 0001_initial.py  0002_usertask_archive.py
